--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,13 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.1.2</version>
+
+                <configuration>
+                    <excludedGroups>functional</excludedGroups>
+                </configuration>
+
+
+
             </plugin>
 
             <plugin>
